refactor: Updated External API models to fit actual required format.
- Updated the Hugging face DTO to match the actual required request format.
- Updated the Notion DTO to match required request format, and updated the NotionClientTest to test against the actual required format
- Updated the prompt factory to request the correct key names for the json response.
- Introduced an LLMService interface to allow for future change of LLM provider if necessary.